Updated background color to optimize text visibility, corrected error in text of project section

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #D9D9D9;
+  background-color: #cdcbcb;
   width: 100%;
   height: 100%;
   animation: fadeInAnimation 1s;
