--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,5 @@
 #about {
-    background: #D9D9D9;
+    background: #cdcbcb;
     margin-top: 5rem;
     background-image: url("./img/headshot.png");
     background-size: 16rem;
