--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -38,7 +38,7 @@ a {
     font-style: normal;
     font-weight: 700;
     line-height: 1rem;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
 }
 
 #contact-section p {
