--- a/src/components/Header/Navigation/Navigation.css
+++ b/src/components/Header/Navigation/Navigation.css
@@ -100,7 +100,7 @@ input[type="checkbox"]:checked ~ span:nth-of-type(3){
   width: 90%;
   transform: translateX(5%);
   height: 3rem;
-  background-color: #D9D9D9;
+  background-color: #cdcbcb;
   display: flex;
   flex-flow: row;
   justify-content: space-between;
@@ -171,7 +171,11 @@ input[type="checkbox"]:checked ~ span:nth-of-type(3){
 @media (max-width: 22rem){
   .navigation {
       width: auto;
+      padding-left: 1rem;
       transform: none;
+  }
+  label{
+    padding-right: 1rem;
   }
 }
 
